trivially constructed spin lock, instead of mutex, to avoid init order issues. compile time flag for verbose mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,5 @@ add_executable(singleton5 examples/singleton5.cpp singleton.h)
 add_executable(singleton6 examples/singleton6.cpp singleton.h)
 add_executable(singleton7 examples/singleton7.cpp singleton.h)
 add_executable(singleton8 examples/singleton8.cpp singleton.h)
+add_executable(singleton9 examples/singleton9.cpp singleton.h)
+add_executable(singleton10 examples/singleton10.cpp singleton.h)
